force-app/main/default/objects/Baby__c/fields/ISBT_My_Newborn__c.field-meta.xml
<CustomField>
    <fullName>ISBT_My_Newborn__c</fullName>
    <description>This is the ISBT for My Newborn.</description>
    <inlineHelpText>This is the ISBT for My Newborn.</inlineHelpText>
    <label>ISBT My Newborn</label>
    <length>50</length>
    <type>Text</type>
</CustomField>