force-app/main/default/objects/Baby__c/fields/Kit_ID__c.field-meta.xml
<CustomField>
    <fullName>Kit_ID__c</fullName>
    <externalId>true</externalId>
    <label>Client ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>