force-app/main/default/objects/Baby__c/fields/Kit_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Kit_Lot_Number__c</fullName>
    <label>Kit Lot Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>