force-app/main/default/objects/Baby__c/fields/Lab__c.field-meta.xml
<CustomField>
    <fullName>Lab__c</fullName>
    <label>Lab</label>
    <referenceTo>Lab__c</referenceTo>
    <relationshipName>Baby</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>