force-app/main/default/objects/Baby__c/fields/Lab_ID__c.field-meta.xml
<CustomField>
    <fullName>Lab_ID__c</fullName>
    <formula>Lab__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lab ID</label>
    <type>Text</type>
</CustomField>