force-app/main/default/objects/Baby__c/fields/Last_Client_Check_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Client_Check_in_Date__c</fullName>
    <description>This is the last checkin date for the client.</description>
    <formula>Account__r.Last_Client_Check_in_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Client Check-in Date</label>
    <type>Date</type>
</CustomField>