force-app/main/default/objects/Baby__c/fields/LPI_CB_Status__c.field-meta.xml
<CustomField>
    <fullName>LPI_CB_Status__c</fullName>
    <description>Status of the CB Sample.</description>
    <label>LPI CB Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quarantined</fullName>
                <label>QUARANTINED</label>
            </value>
            <value>
                <fullName>Permanent Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>