force-app/main/default/objects/Baby__c/fields/LPI_CT__c.field-meta.xml
<CustomField>
    <fullName>LPI_CT__c</fullName>
    <externalId>true</externalId>
    <label>LPI CT</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>