force-app/main/default/objects/Baby__c/fields/LPI_My_Genome__c.field-meta.xml
<CustomField>
    <fullName>LPI_My_Genome__c</fullName>
    <description>This is the kit id for the My Genome sample.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the kit id for the My Genome sample.</inlineHelpText>
    <label>LPI My Genome</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>