force-app/main/default/objects/Baby__c/fields/LPI_My_Newborn__c.field-meta.xml
<CustomField>
    <fullName>LPI_My_Newborn__c</fullName>
    <description>This is the kit id for the My Newborn sample.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the kit id for the My Newborn sample.</inlineHelpText>
    <label>Newborn Client ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>