force-app/main/default/objects/Baby__c/fields/LPI_PT_2_0_Amnion__c.field-meta.xml
<CustomField>
    <fullName>LPI_PT_2_0_Amnion__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>LPI PT 2.0 (Amnion)</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>