force-app/main/default/objects/Baby__c/fields/LPI_PT_2_0_Amnion_Status__c.field-meta.xml
<CustomField>
    <fullName>LPI_PT_2_0_Amnion_Status__c</fullName>
    <description>Status of the PT 2.0 sample.</description>
    <label>LPI PT 2.0 (Amnion) Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quarantined</fullName>
                <label>QUARANTINED</label>
            </value>
            <value>
                <fullName>Permanent Storage</fullName>
            </value>
            <value>
                <fullName>Shipped out to transplant facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>