force-app/main/default/objects/Baby__c/fields/Magnet_Sent__c.field-meta.xml
<CustomField>
    <fullName>Magnet_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Magnet Sent</label>
    <type>Checkbox</type>
</CustomField>