force-app/main/default/objects/Baby__c/fields/Maternal_Exo_Final_Prod_Conc_Exo_uL__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exo_Final_Prod_Conc_Exo_uL__c</fullName>
    <label>Maternal Exo Final Prod Conc (Exo #/uL)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>