force-app/main/default/objects/Baby__c/fields/Maternal_Exo_Sterility_Bottle_ID_AST__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exo_Sterility_Bottle_ID_AST__c</fullName>
    <description>Bottle ID for the maternal exosome sterility AST</description>
    <label>Maternal Exo Sterility Bottle ID AST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>