force-app/main/default/objects/Baby__c/fields/Maternal_Exo_Sterility_Bottle_ID_NST__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exo_Sterility_Bottle_ID_NST__c</fullName>
    <description>Bottle ID for the maternal exosome sterility NST</description>
    <label>Maternal Exo Sterility Bottle ID NST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>