force-app/main/default/objects/Baby__c/fields/Maternal_Exosome_Cryogenically_Preserved__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exosome_Cryogenically_Preserved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator maternal exosome cryogenically preserved.</description>
    <label>Maternal Exosome Cryogenically Preserved</label>
    <type>Checkbox</type>
</CustomField>