force-app/main/default/objects/Baby__c/fields/Maternal_Exosome_Isolation_and_Stor_Req__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exosome_Isolation_and_Stor_Req__c</fullName>
    <label>Maternal Exosome Isolation and Stor. Req</label>
    <length>50</length>
    <type>Text</type>
</CustomField>