force-app/main/default/objects/Baby__c/fields/Maternal_Exosome_Specimen_Final_Volume__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exosome_Specimen_Final_Volume__c</fullName>
    <label>Maternal Exosome Specimen Final Volume</label>
    <length>50</length>
    <type>Text</type>
</CustomField>