force-app/main/default/objects/Baby__c/fields/Maternal_Exosome_Specimen_ID_ISBT__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exosome_Specimen_ID_ISBT__c</fullName>
    <label>Maternal Exosome Specimen ID (ISBT#)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>