force-app/main/default/objects/Baby__c/fields/Maternal_Exosome_Specimen_Received__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exosome_Specimen_Received__c</fullName>
    <label>Maternal Exosome Specimen Received</label>
    <type>DateTime</type>
</CustomField>