force-app/main/default/objects/Baby__c/fields/Maternal_Exosome_Specimen_Vol_Processed__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exosome_Specimen_Vol_Processed__c</fullName>
    <label>Maternal Exosome Specimen Vol Processed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2ml</fullName>
            </value>
            <value>
                <fullName>3ml</fullName>
            </value>
            <value>
                <fullName>10ml</fullName>
            </value>
            <value>
                <fullName>20ml</fullName>
                <isActive>false</isActive>
                <label>20ml</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>