force-app/main/default/objects/Baby__c/fields/Maternal_Exosome_Status__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exosome_Status__c</fullName>
    <label>Maternal Exosome Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUARANTINED</fullName>
            </value>
            <value>
                <fullName>Permanent Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>