force-app/main/default/objects/Baby__c/fields/Maternal_Exosome_Sterility_Result_NST__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exosome_Sterility_Result_NST__c</fullName>
    <description>Sterility result for maternal exosome NST</description>
    <label>Maternal Exosome Sterility Result NST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>