force-app/main/default/objects/Baby__c/fields/Maternal_Exosome_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exosome_Storage_Location__c</fullName>
    <label>Maternal Exosome Storage Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>