force-app/main/default/objects/Baby__c/fields/MNC__c.field-meta.xml
<CustomField>
    <fullName>MNC__c</fullName>
    <inlineHelpText>Entered as a number with maximum of three digits and two decimal places. For example, 123.45.</inlineHelpText>
    <label>MNC</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>