force-app/main/default/objects/Baby__c/fields/Month_of_Child_s_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Child_s_Birthday__c</fullName>
    <description>Month that child is born, used to create filter for all children born this month.</description>
    <formula>MONTH( Collection_Date__c )</formula>
    <label>Month of Child&apos;s Birthday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>