force-app/main/default/objects/Baby__c/fields/Mother_s_Email2__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Email2__c</fullName>
    <description>Used to send Genomics Order Confirmation Email</description>
    <label>Mother&apos;s Email2</label>
    <type>Email</type>
</CustomField>