force-app/main/default/objects/Baby__c/fields/Mother_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Email__c</fullName>
    <formula>Lab__r.Mothers_Email__c</formula>
    <inlineHelpText>LU from the Lab object</inlineHelpText>
    <label>Mother&apos;s Email</label>
    <type>Text</type>
</CustomField>