force-app/main/default/objects/Baby__c/fields/Mother_s_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_First_Name__c</fullName>
    <formula>Lab__r.Mother_s_First_Name__c</formula>
    <label>Mother&apos;s First Name</label>
    <type>Text</type>
</CustomField>