force-app/main/default/objects/Baby__c/fields/Mother_s_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Last_Name__c</fullName>
    <description>LU field from the Lab page, used for Genomics Permissions letter.</description>
    <formula>Lab__r.Mother_s_Last_Name__c</formula>
    <label>Mother&apos;s Last Name</label>
    <type>Text</type>
</CustomField>