force-app/main/default/objects/Baby__c/fields/My_Genome_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>My_Genome_Order_Id__c</fullName>
    <description>My Genome Order ID from Veritas.</description>
    <inlineHelpText>This field is updated by the Veritas Integration.</inlineHelpText>
    <label>My Genome Order Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>