force-app/main/default/objects/Baby__c/fields/My_Newborn_Consent_URL__c.field-meta.xml
<CustomField>
    <fullName>My_Newborn_Consent_URL__c</fullName>
    <description>This field contains the URL to the My Newborn consent/surveys. This field is populated from the response from sending the data for processing.</description>
    <inlineHelpText>This field contains the URL to the My Newborn consent/surveys. This field is populated from the response from sending the data for processing.</inlineHelpText>
    <label>My Newborn Consent URL</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>