force-app/main/default/objects/Baby__c/fields/My_Newborn_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>My_Newborn_Order_Status__c</fullName>
    <description>This is the status of the My Newborn order from Veritas.</description>
    <inlineHelpText>Sent To Veritas = Order sent to Veritas.
Lab Info Sent To Veritas = Sample info sent to Veritas.
Sent Customer Consent Email = Order sent, consent email sent to patient.
New Order = Order created on Veritas Genetics, account created, email info is sent to patient.
Registered = Sample id assigned to order with sample type, collection date.
Received = Sample received in lab and passed Lab QC.
Distributed = Report generated and available for patient, email sent to patient.</inlineHelpText>
    <label>My Newborn Order Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>