force-app/main/default/objects/Baby__c/fields/Name_is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Name_is_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Checklist to determine if client is ready for AC Cert.</description>
    <label>Name is Completed</label>
    <type>Checkbox</type>
</CustomField>