force-app/main/default/objects/Baby__c/fields/NRBC_per_100_WBC__c.field-meta.xml
<CustomField>
    <fullName>NRBC_per_100_WBC__c</fullName>
    <inlineHelpText>Nucleated Red Blood Cell</inlineHelpText>
    <label>NRBC (per 100 WBC)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>