force-app/main/default/objects/Baby__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipName>Baby1</relationshipName>
    <type>Lookup</type>
</CustomField>