force-app/main/default/objects/Baby__c/fields/Order_is_Not_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Order_is_Not_Canceled__c</fullName>
    <description>Used for Checklist to determine if client is ready for AC Cert.</description>
    <formula>if ( Lab__r.Is_Voided_LU__c = false, true, false)</formula>
    <label>Order is Not Canceled</label>
    <type>Checkbox</type>
</CustomField>