force-app/main/default/objects/Baby__c/fields/Parent_A__c.field-meta.xml
<CustomField>
    <fullName>Parent_A__c</fullName>
    <inlineHelpText>Hidden field used to populate Certificate of Storage. Getting Mother&apos;s Name from Lab.</inlineHelpText>
    <label>Parent A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>