force-app/main/default/objects/Baby__c/fields/Parent_B__c.field-meta.xml
<CustomField>
    <fullName>Parent_B__c</fullName>
    <inlineHelpText>Hidden field used to populate Certificate of Storage. Getting Father&apos;s Name from Lab.</inlineHelpText>
    <label>Parent B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>