force-app/main/default/objects/Baby__c/fields/Parents_First_Names__c.field-meta.xml
<CustomField>
    <fullName>Parents_First_Names__c</fullName>
    <description>Pulls first name of Contact and Contact 2 from Lab; used by Handwrytten for baby&apos;s birthday cards.</description>
    <formula>Lab__r.Mother_s_First_Name__c &amp; if( NOT(ISBLANK ( Lab__r.Father_s_First_Name__c )), &quot; and &quot; &amp; Lab__r.Father_s_First_Name__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parents First Names</label>
    <type>Text</type>
</CustomField>