force-app/main/default/objects/Baby__c/fields/Phone_Link__c.field-meta.xml
<CustomField>
    <fullName>Phone_Link__c</fullName>
    <description>This is a clickable phone field that can be used in reports.</description>
    <formula>HYPERLINK(&quot;tel:&quot; &amp;  Phone__c  , Phone__c)</formula>
    <label>Phone Link</label>
    <type>Text</type>
</CustomField>