force-app/main/default/objects/Baby__c/fields/Placenta_2_0_Am_Cryogenically_Preserved__c.field-meta.xml
<CustomField>
    <fullName>Placenta_2_0_Am_Cryogenically_Preserved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placenta 2.0/AM Cryogenically Preserved</label>
    <type>Checkbox</type>
</CustomField>