force-app/main/default/objects/Baby__c/fields/Placenta_2_0_Amnion_Condition__c.field-meta.xml
<CustomField>
    <fullName>Placenta_2_0_Amnion_Condition__c</fullName>
    <label>Placenta 2.0 (Amnion) Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>