force-app/main/default/objects/Baby__c/fields/Placenta_Received__c.field-meta.xml
<CustomField>
    <fullName>Placenta_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placenta Received</label>
    <type>Checkbox</type>
</CustomField>