force-app/main/default/objects/Baby__c/fields/Placenta_Tissue_Cryogenically_Preserved__c.field-meta.xml
<CustomField>
    <fullName>Placenta_Tissue_Cryogenically_Preserved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placenta Tissue Cryogenically Preserved</label>
    <type>Checkbox</type>
</CustomField>