force-app/main/default/objects/Baby__c/fields/Placenta_Tissue_Swab_Sterility_Result__c.field-meta.xml
<CustomField>
    <fullName>Placenta_Tissue_Swab_Sterility_Result__c</fullName>
    <description>Placenta Tissue sterility result via swab.</description>
    <label>Placenta Tissue Swab Sterility Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sterility_Results</valueSetName>
    </valueSet>
</CustomField>