force-app/main/default/objects/Baby__c/fields/Process_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Process_Datetime__c</fullName>
    <description>This is the datetime of the processing.</description>
    <label>Process Datetime</label>
    <type>DateTime</type>
</CustomField>