force-app/main/default/objects/Baby__c/fields/Process_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Process_Timezone__c</fullName>
    <description>This is the timezone for the processing.</description>
    <label>Process Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US - Eastern</fullName>
            </value>
            <value>
                <fullName>US - Central</fullName>
            </value>
            <value>
                <fullName>US - Mountain</fullName>
            </value>
            <value>
                <fullName>US - Pacific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>