force-app/main/default/objects/Baby__c/fields/Processing_Lab__c.field-meta.xml
<CustomField>
    <fullName>Processing_Lab__c</fullName>
    <description>Used to manage Lab (Partner Portal) access to record</description>
    <formula>TEXT(Lab__r.Processing_Lab__c)</formula>
    <inlineHelpText>LU field from the Lab page</inlineHelpText>
    <label>Processing Lab</label>
    <type>Text</type>
</CustomField>