force-app/main/default/objects/Baby__c/fields/Product_s_have_been_preserved__c.field-meta.xml
<CustomField>
    <fullName>Product_s_have_been_preserved__c</fullName>
    <description>Used for Checklist to determine if client is ready for AC Cert.</description>
    <formula>if ( Cord_Blood_Cryogenically_Preserved__c = true ||  Cord_Tissue_Cryogenically_Preserved__c = true ||  Placenta_Tissue_Cryogenically_Preserved__c = true ||
 Placenta_2_0_Am_Cryogenically_Preserved__c = true, true, false)</formula>
    <label>Product(s) have been preserved</label>
    <type>Checkbox</type>
</CustomField>