force-app/main/default/objects/Baby__c/fields/Proliferation_Assay_Test_CT__c.field-meta.xml
<CustomField>
    <fullName>Proliferation_Assay_Test_CT__c</fullName>
    <description>New picklist values added 9/11/2016, data updated accordingly.</description>
    <inlineHelpText>Test is required or requested = Required. Test results are available and report is completed = Completed.</inlineHelpText>
    <label>Proliferation Assay Test - CT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed - Good</fullName>
            </value>
            <value>
                <fullName>Completed - Fair</fullName>
            </value>
            <value>
                <fullName>Completed - Discarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>