force-app/main/default/objects/Baby__c/fields/Proliferation_Assay_Test_PT_2_0_AM__c.field-meta.xml
<CustomField>
    <fullName>Proliferation_Assay_Test_PT_2_0_AM__c</fullName>
    <label>Proliferation Assay Test - PT 2.0 (AM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Completed - Good</fullName>
            </value>
            <value>
                <fullName>Completed - Fair</fullName>
            </value>
            <value>
                <fullName>Completed - Poor</fullName>
            </value>
            <value>
                <fullName>Completed - Discarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>