force-app/main/default/objects/Baby__c/fields/PT_20_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>PT_20_Storage_Location__c</fullName>
    <description>Storage Location of the PT 2.0 sample.</description>
    <inlineHelpText>Storage Location of the PT 2.0 sample.</inlineHelpText>
    <label>PT 20 Storage Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>