force-app/main/default/objects/Baby__c/fields/PT_Sent__c.field-meta.xml
<CustomField>
    <fullName>PT_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Client indicates sending product via Digital Courier Pick-Up.</inlineHelpText>
    <label>PT Sent</label>
    <type>Checkbox</type>
</CustomField>