force-app/main/default/objects/Baby__c/fields/PT_Sterility_Bottle_ID_NST__c.field-meta.xml
<CustomField>
    <fullName>PT_Sterility_Bottle_ID_NST__c</fullName>
    <label>PT Sterility Bottle ID NST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>