force-app/main/default/objects/Baby__c/fields/PT_Sterility_Result_AST__c.field-meta.xml
<CustomField>
    <fullName>PT_Sterility_Result_AST__c</fullName>
    <label>PT Sterility Result AST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>