force-app/main/default/objects/Baby__c/fields/PT_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>PT_Storage_Location__c</fullName>
    <description>Storage Location of the PT sample.</description>
    <inlineHelpText>Storage Location of the CB sample.</inlineHelpText>
    <label>PT Storage Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>