force-app/main/default/objects/Baby__c/fields/Reason_for_Discarded__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Discarded__c</fullName>
    <label>Reason for Discarded</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged upon receipt</fullName>
            </value>
            <value>
                <fullName>Not viable for testing</fullName>
            </value>
            <value>
                <fullName>Not checked on the DCS</fullName>
            </value>
            <value>
                <fullName>Client request, below benchmark</fullName>
            </value>
            <value>
                <fullName>Client request, other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>