force-app/main/default/objects/Baby__c/fields/Release_PT_2_0__c.field-meta.xml
<CustomField>
    <fullName>Release_PT_2_0__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release PT 2.0</label>
    <type>Checkbox</type>
</CustomField>