force-app/main/default/objects/Baby__c/fields/Released_CB2_0__c.field-meta.xml
<CustomField>
    <fullName>Released_CB2_0__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Released CB2.0</label>
    <type>Checkbox</type>
</CustomField>